@@ -79,7 +79,8 @@ public:
 	int mode; /* id of mode, see MainWindow for modes */
 	int fade;
 	int bonus_info;
-	int fps; /* frames per second: 0 - no limit, 1 - 50, 2 - 100, 3 - 200 */
+	int fps; /* frames per second: 0 - no limit, 1 - 100, 2 - 200 */
+	int show_fps;
 	int ball_level;
 	int i_key_speed; /* integer value that is divided by 1000 to get real key_speed */
 	int antialiasing;
